about to switch RTCPeerConnection-v1.5 to google adapter.js

--- a/src/views/login/body.html
+++ b/src/views/login/body.html
@@ -1,5 +1,5 @@
-<div class="container" ng-controller="SatellizerLoginCtrl">
+<div class="container" ng-controller="SatellizerLoginCtrl" ng-init="redirect=true">
   <div class="row">
-    <div ng-include="'/views/login/LoginPanel.html'"></div>
+    <div class="col-md-4 col-md-offset-4" ng-include="'/views/login/LoginPanel.html'"></div>
   </div>
 </div>
