--- a/src/views/rooms/dialogs/ManageDelIpcam.html
+++ b/src/views/rooms/dialogs/ManageDelIpcam.html
@@ -3,7 +3,7 @@
 	<p translate="PAGE.ROOMS.DEL_IPCAM.WARNING"></p>
 	<p>
 		<span ng-bind="::ngDialogData.room.Name"></span>/
-		<span ng-bind="::ngDialogData.ipcam.id"></span>
+		<span ng-bind="::ngDialogData.ipcam.Id"></span>
 	</p>
 </div>
 <form>
