--- a/src/views/dl/body.html
+++ b/src/views/dl/body.html
@@ -2,12 +2,12 @@
   <div class="download-header">
     <h4 ng-bind="'PAGE.DOWNLOAD.DESC'|translate" class="col-md-9"></h4>
     <div class="col-md-3">
-      <div class="btn-group pull-right" dropdown>
-        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
+      <div class="btn-group pull-right" uib-dropdown>
+        <button type="button" class="btn btn-primary" uib-dropdown-toggle>
           <span translate="PAGE.DOWNLOAD.OS"></span>:
           <span class="caret"></span>
         </button>
-        <ul class="dropdown-menu" role="menu">
+        <ul class="uib-dropdown-menu" role="menu">
           <li ng-repeat="os in supportedOs">
             <a ng-click="setOs(os)" ng-bind="os"></a>
           </li>
