--- a/src/views/share/navbar.html
+++ b/src/views/share/navbar.html
@@ -20,13 +20,13 @@
 						<span ng-if="nav.txt" ng-bind="nav.txt|translate"></span>
 					</a>
 				</li>
-				<li class="dropdown" dropdown>
-					<a class="dropdown-toggle" dropdown-toggle aria-haspopup="true" aria-expanded="false">
+				<li class="dropdown" uib-dropdown>
+					<a uib-dropdown-toggle aria-haspopup="true" aria-expanded="false">
 						<i class="fa fa-language"></i>
 						<span ng-bind="'NAVBAR.LANG'|translate"> </span>
 						<span class="caret"></span>
 					</a>
-					<ul class="dropdown-menu" role="menu">
+					<ul class="uib-dropdown-menu" role="menu">
 						<li>
 							<a ng-click="change('en_US')">
 								<span ng-bind="'NAVBAR.EN_US'|translate"> </span>
@@ -41,7 +41,7 @@
 				</li>
 			</ul>
 		</nav>
-		<nav class="visible-xs" collapse="!isCollapsed">
+		<nav class="visible-xs" uib-collapse="!isCollapsed">
 			<ul class="nav navbar-nav">
 				<li ng-repeat="nav in navs" ng-if="!nav.hideXs && nav.visible" ng-class="{active:nav.active}">
 					<a ng-attr-href="{{nav.href}}" ng-click="nav.go($event)">
