--- a/src/views/index/body.html
+++ b/src/views/index/body.html
@@ -39,22 +39,22 @@
   <div class="feature pb-pattern cross-bold">
     <div class="section-inner container text-center">
       <div class="row">
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <span class="fa-stack fa-5x faa-parent animated-hover">
+        <div class="col-md-4">
+          <span class="fa-stack fa-3x faa-parent animated-hover">
             <i class="fa fa-dollar fa-stack-1x"></i>
             <i class="fa fa-ban fa-stack-2x text-danger faa-horizontal"></i>
             <span class="feature-text" translate="PAGE.INDEX.FEATURE.FREE"></span>
           </span>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <span class="fa-stack fa-5x faa-parent animated-hover">
+        <div class="col-md-4">
+          <span class="fa-stack fa-3x faa-parent animated-hover">
             <i class="fa fa-cloud fa-stack-2x text-info"></i>
             <i class="fa fa-lock fa-stack-1x faa-flash"></i>
             <span class="feature-text" translate="PAGE.INDEX.FEATURE.SECURE"></span>
           </span>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <span class="fa-stack fa-5x faa-parent animated-hover">
+        <div class="col-md-4">
+          <span class="fa-stack fa-3x faa-parent animated-hover">
             <i class="fa fa-square fa-stack-2x text-success faa-burst"></i>
             <i class="fa fa-coffee fa-stack-1x"></i>
             <span class="feature-text" translate="PAGE.INDEX.FEATURE.EASY"></span>
