--- a/src/views/index/body.html
+++ b/src/views/index/body.html
@@ -20,15 +20,15 @@
     <div class="section-inner container text-center">
       <div class="row text-danger" translate="PAGE.INDEX.UNSUPPORTED"></div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <a target="_blank" href="http://www.firefox.com.cn/download" title="Firefox"><i class="fa fa-firefox fa-5x"></i></a>
           <code translate="PAGE.INDEX.FIREFOX"></code>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <a target="_blank" href="http://www.google.cn/intl/zh-CN/chrome/browser" title="Chrome"><i class="fa fa-chrome fa-5x"></i></a>
           <code translate="PAGE.INDEX.CHROME"></code>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <a target="_blank" href="http://www.opera.com/zh-cn/computer" title="Opera"><i class="fa fa-opera fa-5x"></i></a>
           <code translate="PAGE.INDEX.OPERA"></code>
         </div>
@@ -39,21 +39,21 @@
   <div class="feature pb-pattern cross-bold">
     <div class="section-inner container text-center">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="fa-stack fa-3x faa-parent animated-hover">
             <i class="fa fa-dollar fa-stack-1x"></i>
             <i class="fa fa-ban fa-stack-2x text-danger faa-horizontal"></i>
             <span class="feature-text" translate="PAGE.INDEX.FEATURE.FREE"></span>
           </span>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="fa-stack fa-3x faa-parent animated-hover">
             <i class="fa fa-cloud fa-stack-2x text-info"></i>
             <i class="fa fa-lock fa-stack-1x faa-flash"></i>
             <span class="feature-text" translate="PAGE.INDEX.FEATURE.SECURE"></span>
           </span>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="fa-stack fa-3x faa-parent animated-hover">
             <i class="fa fa-square fa-stack-2x text-success faa-burst"></i>
             <i class="fa fa-coffee fa-stack-1x"></i>
