--- a/src/styles/social.less
+++ b/src/styles/social.less
@@ -18,6 +18,6 @@
 .btn-qq            { .btn-social(#418ae2); }
 .btn-renren        { .btn-social(#2f6797); }
 .btn-baidu         { .btn-social(#b21f24); }
-.btn-douban        { .btn-social(#2278cf); }
+.btn-douban        { .btn-social(#2AAC5E); }
 .btn-wechat        { .btn-social(#73db42); }
 .btn-mock          { .btn-social(#4CAE4C); }
